2A/05_Projet_GL/src/test/deca/context/valid/complet/22_redef_Method_sig_complexe.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024


class A {

    int get(int a , float b , A a1 , Object o , boolean b2 ) {

    }
}

class B extends A {

    int get(int a , float b , A a1 , Object o , boolean b2 ) {

    } 
}